2010-03-10  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* configure.ac, src/versionp.h: Bumped version to 3.6.8.92

2010-03-07  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* src/Vlist.c(PaintEntryString): Fixed a typo introducved by my patch
	from 2010-03-03 preventing compiling with Xaw3d 1.5. (Fixes #28424)

	* configure.ac: Fix several tests on RHEL 4.8.

2010-03-07  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* configure.ac, src/versionp.h: Bumped version to 3.6.8.91

2010-03-03  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* src/configure.ac: if no international support is available in Xaw3d, 
	do not abort.
	
	* src/configure.ac: setenv-test: if --disable-setenv-code is given,
	continue without testing for setenv support

	* src/dialog.c, src/info.c, src/misc_private.c, src/Vlist.c: Use
	#ifdef-s to enable compilation on Xaw3d-1.5 by disabling all
	if "international"-parts statements and leaving only their "else case".

2010-03-02  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* src/configure.ac: New option "--enable-international".
	
	* src/Makefile.am(target gv_class.ad): Enable international if requested

2010-03-02  Yasuyuki Furukawa <yasu@on.cs.keio.ac.jp>

	* src/callbacks.c(setTitle): New function for supporting UTF-8 titles
	
	* src/callbacks.c(showTitle): call setTitle
	
	* src/misc.c(setup_ghostview): likewise

2010-03-01  Dr. Werner Fink <werner@suse.de>
	    Yasuyuki Furukawa <yasu@on.cs.keio.ac.jp>
            Markus Steinborn <gnugv_maintainer@yahoo.de>

	* Makefile.am: Include README.I18N in distribuation
	
	* src/main.c(main): Correcting environment, calling XtSetLanguageProc
	
	* src/Makefile.am: Handling of new source files
	
	* src/info.c, src/misc_private.c, src/dialog.c: Properly handle
	the case that international is enabled.
	
	* src/gv_misc_res.dat: Add resource "GV*fileSelPopup.title"
	
	* src/gv_font_res-I18N_mb.dat: New filw with extra resources for I18N.

2010-02-27  Markus Steinborn <gnugv_maintainer@yahoo.de>
