@@ -1,3 +1,7 @@
+2010-03-09  Markus Steinborn <gnugv_maintainer@yahoo.de>
+
+	* src/gv-update-userconfig.in: corrected parsing version from ~/.gv
+
 2010-03-10  Markus Steinborn <gnugv_maintainer@yahoo.de>
 
 	* configure.ac, src/versionp.h: Bumped version to 3.6.8.92
